Fix tests to handle directoryInfos